--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 JWT_SECRET=your_jwt_secret_here
-MONGODB_URI=mongodb+srv://useryassine:EP1Z6eyTpYk637oi@cluster0.l38olsk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=your url here 
